Refactored + Added New Commands